tests/rosetta/out/Racket/abundant-odd-numbers.error
type: error[T007]: argument 3: expected int, got bigint
  --> /workspace/mochi/tests/rosetta/x/Mochi/abundant-odd-numbers.mochi:41:10

 41 |   return substring(s, 0, len(s) - 3)
    |          ^

help:
  Ensure the argument type matches the function’s signature.